feat: refactor mini-game UI with new game support
- Created a new dedicated view for mini-games with a picker to select between different game options
- Removed the hardcoded mini-game UI in UtilityDetail.swift and replaced it with the new MiniGameView component
- Added support for AT conversation room mini-game
- Users can now select from available mini-games through a dropdown picker with animated transitions

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1620,9 +1620,6 @@
         }
       }
     },
-    "争锋频道：青草城" : {
-
-    },
     "从剪贴板读取" : {
 
     },
@@ -2033,9 +2030,6 @@
     "国际服（YoStarEN）" : {
 
     },
-    "在活动主界面（右下角有“加入赛事”处）开始任务。" : {
-
-    },
     "在第五层BOSS前暂停" : {
 
     },
@@ -2202,6 +2196,9 @@
     "开始唤醒" : {
 
     },
+    "开始游戏" : {
+
+    },
     "开局分队" : {
 
     },
@@ -2248,9 +2245,6 @@
       }
     },
     "手动确认1星" : {
-
-    },
-    "手动跳过教程对话，然后可以直接退出" : {
 
     },
     "手动输入关卡名" : {
@@ -2950,9 +2944,6 @@
     "资源更新来源" : {
 
     },
-    "跟着鸭总喝口汤" : {
-
-    },
     "运行日志" : {
 
     },
@@ -2981,6 +2972,9 @@
           }
         }
       }
+    },
+    "选择小游戏" : {
+
     },
     "选择本地文件…" : {
 
