chore: 小游戏页面调整

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -70,6 +70,9 @@
     "1-7" : {
       "shouldTranslate" : false
     },
+    "1层全买。\n2层买寻访凭证和招聘许可。" : {
+
+    },
     "3星" : {
       "localizations" : {
         "ko" : {
@@ -164,6 +167,9 @@
           }
         }
       }
+    },
+    "AT-相谈室" : {
+
     },
     "BattleFormation: %@" : {
       "localizations" : {
@@ -1620,6 +1626,9 @@
         }
       }
     },
+    "争锋频道：青草城" : {
+
+    },
     "从剪贴板读取" : {
 
     },
@@ -2030,6 +2039,9 @@
     "国际服（YoStarEN）" : {
 
     },
+    "在活动主界面（右下角有“开始营业/继续营业”处）开始任务。\n等待自动完成相谈室对话。" : {
+
+    },
     "在第五层BOSS前暂停" : {
 
     },
@@ -2245,6 +2257,9 @@
       }
     },
     "手动确认1星" : {
+
+    },
+    "手动跳过教程对话，然后可以直接退出。\n在活动主界面（右下角有“加入赛事”处）开始任务。\n\n跟着鸭总喝口汤。" : {
 
     },
     "手动输入关卡名" : {
@@ -2502,6 +2517,9 @@
     "沙洲遗闻" : {
 
     },
+    "活动商店" : {
+
+    },
     "深入调查" : {
 
     },
@@ -2585,6 +2603,9 @@
 
     },
     "生息演算" : {
+
+    },
+    "生息演算商店" : {
 
     },
     "界园" : {
@@ -2677,6 +2698,9 @@
           }
         }
       }
+    },
+    "绿票商店" : {
+
     },
     "繁中服（txwy）" : {
 
@@ -2874,6 +2898,12 @@
         }
       }
     },
+    "请在活动商店页面开始。" : {
+
+    },
+    "请在活动商店页面开始。\n不买无限池。" : {
+
+    },
     "请将PlayCover的分辨率设置为1280x720、分辨率缩放设置为1.0。" : {
 
     },
@@ -2921,6 +2951,9 @@
       }
     },
     "账号切换" : {
+
+    },
+    "购买寻访凭证。\n请确保自己只少有258张黄票。" : {
 
     },
     "购物" : {
@@ -3073,6 +3106,9 @@
       }
     },
     "骰子" : {
+
+    },
+    "黄票商店" : {
 
     },
     "黑名单" : {
