feat: 多端通知兼容(Bark)

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -171,6 +171,15 @@
     "AT-相谈室" : {
 
     },
+    "Bark 通知发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+
+    },
+    "Bark 通知发送成功。" : {
+
+    },
+    "Bark 通知连续失败 %lld 次，已自动关闭此功能。请检查网络和 Bark Key/服务器配置。" : {
+
+    },
     "BattleFormation: %@" : {
       "localizations" : {
         "ko" : {
@@ -943,6 +952,9 @@
     "IP请求频率过快，请稍后再试" : {
 
     },
+    "Key" : {
+
+    },
     "LabelsRefreshed" : {
       "localizations" : {
         "ko" : {
@@ -1573,6 +1585,9 @@
         }
       }
     },
+    "Webhook" : {
+
+    },
     "一层远见密文板" : {
 
     },
@@ -1626,6 +1641,9 @@
         }
       }
     },
+    "争锋频道：蜜果城" : {
+
+    },
     "争锋频道：青草城" : {
 
     },
@@ -1647,6 +1665,9 @@
           }
         }
       }
+    },
+    "任务设置" : {
+
     },
     "企鹅物流" : {
       "localizations" : {
@@ -1871,6 +1892,12 @@
     "最高难度" : {
 
     },
+    "准备发送 Bark 日志摘要 (%lld条)..." : {
+
+    },
+    "准备发送 DingTalk 日志摘要 (%lld条)..." : {
+
+    },
     "凹2构想开局" : {
 
     },
@@ -2008,6 +2035,15 @@
     "发电站" : {
 
     },
+    "发送 Bark 通知失败: %@" : {
+
+    },
+    "发送测试" : {
+
+    },
+    "发送钉钉通知摘要失败: %@" : {
+
+    },
     "取消" : {
       "localizations" : {
         "ko" : {
@@ -2031,6 +2067,12 @@
 
     },
     "吃理智药" : {
+
+    },
+    "启用 Bark 通知" : {
+
+    },
+    "启用 DingTalk 通知" : {
 
     },
     "周常任务" : {
@@ -2116,6 +2158,9 @@
 
     },
     "宿舍空余位置蹭信赖" : {
+
+    },
+    "密钥 (可选)" : {
 
     },
     "寻访一次" : {
@@ -2458,6 +2503,9 @@
     "有存档，通过组装支援道具刷生息点数，组装完成后将会跳到下一个量定日并读取前一个量定日的存档" : {
 
     },
+    "服务器地址" : {
+
+    },
     "未启用" : {
       "localizations" : {
         "ko" : {
@@ -2472,6 +2520,9 @@
 
     },
     "未知排班" : {
+
+    },
+    "构建 Bark URL 失败。" : {
 
     },
     "构想" : {
@@ -2500,6 +2551,9 @@
 
     },
     "正在下载…" : {
+
+    },
+    "正在发送..." : {
 
     },
     "正在解压…" : {
@@ -2840,6 +2894,9 @@
     "自定义排班" : {
 
     },
+    "若配置无效则将在正式运行中自动关闭" : {
+
+    },
     "萨卡兹" : {
 
     },
@@ -2866,6 +2923,12 @@
 
     },
     "训练室" : {
+
+    },
+    "记录发送日志" : {
+
+    },
+    "设定计时" : {
 
     },
     "设置" : {
@@ -3015,6 +3078,12 @@
     "选择本地文件…" : {
 
     },
+    "通知服务" : {
+
+    },
+    "通知设置" : {
+
+    },
     "邮件" : {
 
     },
@@ -3022,6 +3091,15 @@
 
     },
     "重新打开应用后生效。" : {
+
+    },
+    "钉钉通知发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+
+    },
+    "钉钉通知发送成功。" : {
+
+    },
+    "钉钉通知连续失败 %lld 次，已自动关闭此功能。请检查网络和配置。" : {
 
     },
     "钥匙" : {
