feat: 添加 Qmsg、自定义webhook 通知服务并支持自定义发送间隔

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -4,7 +4,25 @@
     "" : {
       "shouldTranslate" : false
     },
+    " - 发送时间" : {
+
+    },
+    " - 格式化后的日志正文" : {
+
+    },
+    " - 消息标题" : {
+
+    },
     "“开局干员”使用助战" : {
+
+    },
+    "{content}" : {
+
+    },
+    "{time}" : {
+
+    },
+    "{title}" : {
 
     },
     "%@" : {
@@ -1107,6 +1125,21 @@
         }
       }
     },
+    "Qmsg URL 无效。请检查 Server 和 Key。" : {
+
+    },
+    "Qmsg 发送失败：未指定用户 QQ。" : {
+
+    },
+    "Qmsg 通知发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+
+    },
+    "Qmsg 通知发送成功。" : {
+
+    },
+    "Qmsg 通知连续失败 %lld 次，已自动关闭。" : {
+
+    },
     "Read item_index.json failed: %@" : {
       "localizations" : {
         "zh-Hans" : {
@@ -1351,6 +1384,9 @@
         }
       }
     },
+    "Server" : {
+
+    },
     "SSSGamePass" : {
       "localizations" : {
         "ko" : {
@@ -1586,6 +1622,9 @@
       }
     },
     "Webhook" : {
+
+    },
+    "Webhook URL" : {
 
     },
     "一层远见密文板" : {
@@ -1898,6 +1937,12 @@
     "准备发送 DingTalk 日志摘要 (%lld条)..." : {
 
     },
+    "准备发送 Qmsg 通知..." : {
+
+    },
+    "准备发送自定义 Webhook..." : {
+
+    },
     "凹2构想开局" : {
 
     },
@@ -1916,6 +1961,9 @@
           }
         }
       }
+    },
+    "分钟" : {
+
     },
     "分队开局密文板" : {
 
@@ -2038,10 +2086,19 @@
     "发送 Bark 通知失败: %@" : {
 
     },
+    "发送 Qmsg 通知失败: %@" : {
+
+    },
     "发送测试" : {
 
     },
+    "发送自定义 Webhook 失败: %@" : {
+
+    },
     "发送钉钉通知摘要失败: %@" : {
+
+    },
+    "发送间隔" : {
 
     },
     "取消" : {
@@ -2060,6 +2117,9 @@
     "可以使用非好友助战" : {
 
     },
+    "可用占位符说明" : {
+
+    },
     "可能需要设置系统代理。" : {
 
     },
@@ -2073,6 +2133,12 @@
 
     },
     "启用 DingTalk 通知" : {
+
+    },
+    "启用 Qmsg 通知" : {
+
+    },
+    "启用自定义 Webhook" : {
 
     },
     "周常任务" : {
@@ -2522,6 +2588,9 @@
     "未知排班" : {
 
     },
+    "机器人 QQ (可选)" : {
+
+    },
     "构建 Bark URL 失败。" : {
 
     },
@@ -2663,6 +2732,9 @@
 
     },
     "生息演算商店" : {
+
+    },
+    "用户 QQ (接收消息)" : {
 
     },
     "界园" : {
@@ -2888,6 +2960,18 @@
     "自定义" : {
 
     },
+    "自定义 Webhook URL 无效。" : {
+
+    },
+    "自定义 Webhook 发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+
+    },
+    "自定义 Webhook 发送成功。" : {
+
+    },
+    "自定义 Webhook 连续失败 %lld 次，已自动关闭。" : {
+
+    },
     "自定义基建配置" : {
 
     },
@@ -2941,6 +3025,9 @@
         }
       }
     },
+    "设置合并日志并发送通知的时间间隔，单位为分钟（1-120）。" : {
+
+    },
     "访问被禁止，请检查IP或CDK" : {
 
     },
@@ -2982,6 +3069,9 @@
           }
         }
       }
+    },
+    "请求体 (JSON Body Template)" : {
+
     },
     "请注意，这是真的抽卡！不是模拟！！！" : {
       "localizations" : {
