feat： 日志分类发送
使用文字匹配的方式将日志进行分类（任务完成、失败）（确实找不到其他办法可以分类ww），用户可选择类型发送
并单独将通知部分移至新文件夹中

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -2092,6 +2092,9 @@
     "发送 Qmsg 通知失败: %@" : {
 
     },
+    "发送所有日志" : {
+
+    },
     "发送测试" : {
 
     },
@@ -2251,6 +2254,9 @@
           }
         }
       }
+    },
+    "将在下一发送周期生效" : {
+
     },
     "小游戏" : {
 
