fix: 失败重试逻辑修正
考虑到原有逻辑会错误地导致重试过程中其他平台也会重发消息，现将重试日志列表按平台分开，并将重试时间修改为10s

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -192,7 +192,7 @@
     "AT-相谈室" : {
 
     },
-    "Bark 通知发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+    "Bark 通知发送失败（第 %lld 次尝试），将在10s后重试。" : {
 
     },
     "Bark 通知发送成功。" : {
@@ -1134,7 +1134,7 @@
     "Qmsg 发送失败：未指定用户 QQ。" : {
 
     },
-    "Qmsg 通知发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+    "Qmsg 通知发送失败（第 %lld 次尝试），将在10s后重试。" : {
 
     },
     "Qmsg 通知发送成功。" : {
@@ -2972,7 +2972,7 @@
     "自定义 Webhook URL 无效。" : {
 
     },
-    "自定义 Webhook 发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+    "自定义 Webhook 发送失败（第 %lld 次尝试），将在10s后重试。" : {
 
     },
     "自定义 Webhook 发送成功。" : {
@@ -3192,7 +3192,7 @@
     "重新打开应用后生效。" : {
 
     },
-    "钉钉通知发送失败（第 %lld 次尝试），将在下一周期重试。" : {
+    "钉钉通知发送失败（第 %lld 次尝试），将在10s后重试。" : {
 
     },
     "钉钉通知发送成功。" : {
