feat: 添加控件悬浮提示

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1654,6 +1654,9 @@
         }
       }
     },
+    "任务设置" : {
+
+    },
     "企鹅物流" : {
       "localizations" : {
         "ko" : {
@@ -2873,6 +2876,9 @@
           }
         }
       }
+    },
+    "设置定时" : {
+
     },
     "访问被禁止，请检查IP或CDK" : {
 
