feat: 全任务完成后再发送通知选项

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1281,6 +1281,9 @@
         }
       }
     },
+    "RM-次生预案" : {
+
+    },
     "RoguelikeGamePass" : {
       "localizations" : {
         "ko" : {
@@ -1707,6 +1710,9 @@
           }
         }
       }
+    },
+    "任务全部完成后发送" : {
+
     },
     "企鹅物流" : {
       "localizations" : {
@@ -3018,9 +3024,6 @@
         }
       }
     },
-    "设置合并日志并发送通知的时间间隔，单位为分钟（1-120）。" : {
-
-    },
     "访问被禁止，请检查IP或CDK" : {
 
     },
@@ -3124,6 +3127,9 @@
 
     },
     "资源更新来源" : {
+
+    },
+    "过完新手教程后进入前哨支点，滑动到界面最左侧。" : {
 
     },
     "运行日志" : {
