feat: Switch Bark Notifications to JSON POST
This change resolves the issue where Bark notifications fail to send due to URL length limitations when the log content (body) is too long. The original HTTP GET request method places all content in the URL path, which easily exceeds maximum allowed URL lengths (typically 2KB to 8KB).

✨ Key Changes
Protocol Switch: Changed the Bark notification sending method from HTTP GET to HTTP POST request.

Data Format: Content (title, body, key, etc.) is now packaged as a JSON Payload and sent in the request body (httpBody), following the official Bark JSON POST documentation.

Code Refactoring:

Removed the old buildURL(for:config:viewModel:) method from BarkService.

Introduced a new buildRequest(for:config:viewModel:) method to construct a URLRequest object containing the JSON data.

Modified the send(...) method to use URLSession.shared.data(for: request) for sending the POST request.

解决了当日志内容 (body) 过长时，Bark 通知因 URL 长度限制而发送失败的问题。原有的 GET 请求方式将所有通知内容（包括正文）都放在 URL 路径中，容易超过服务器或客户端限制的最大 URL 长度。

✨ 主要改动
协议切换：将 Bark 通知的发送方式从 HTTP GET 请求切换为 HTTP POST 请求。

数据格式：将通知内容 (title, body, key 等) 封装为 JSON Payload，并通过请求体 (httpBody) 发送，遵循 Bark 官方文档的 JSON POST 格式。

代码重构：

移除 BarkService 中构建 URL 的 buildURL(for:config:viewModel:) 方法。

新增 buildRequest(for:config:viewModel:) 方法，用于构建包含 JSON 数据的 URLRequest 对象。

修改 send(...) 方法，使用 URLSession.shared.data(for: request) 发送 POST 请求。

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1937,7 +1937,7 @@
     "最高难度" : {
 
     },
-    "准备发送 Bark 日志摘要 (%lld条)..." : {
+    "准备发送 Bark 日志摘要 (%lld条)" : {
 
     },
     "准备发送 DingTalk 日志摘要 (%lld条)..." : {
@@ -2593,7 +2593,7 @@
     "机器人 QQ (可选)" : {
 
     },
-    "构建 Bark URL 失败。" : {
+    "构建 Bark POST 请求失败。" : {
 
     },
     "构想" : {
