chore: 更新本地化文本

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1059,6 +1059,9 @@
         }
       }
     },
+    "OS-喀兰贸易技术研发部" : {
+
+    },
     "PlayCover 链接…" : {
       "localizations" : {
         "ko" : {
@@ -2049,6 +2052,9 @@
 
     },
     "在活动主界面（右下角有“开始营业/继续营业”处）开始任务。\n等待自动完成相谈室对话。" : {
+
+    },
+    "在活动主界面（右下角有“开始重建”处）开始任务。" : {
 
     },
     "在第五层BOSS前暂停" : {
