chore: 更新本地化文本

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -2014,6 +2014,9 @@
     "博朗台碎石模式" : {
 
     },
+    "卫戍协议：盟约" : {
+
+    },
     "发现新资源版本：%@" : {
 
     },
@@ -2055,6 +2058,9 @@
 
     },
     "在活动主界面（右下角有“开始重建”处）开始任务。" : {
+
+    },
+    "在活动主界面（有“独立模拟”处开始任务）\n手动通关“标准模拟”可以更快的刷分\n只能刷等级奖励，拿蚀刻章得打完所有的“关键目标”" : {
 
     },
     "在第五层BOSS前暂停" : {
