--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1217,6 +1217,9 @@
         }
       }
     },
+    "PV-烟花筹委会" : {
+
+    },
     "Read item_index.json failed: %@" : {
       "localizations" : {
         "ko" : {
@@ -2713,6 +2716,9 @@
 
     },
     "在活动主界面（有“独立模拟”处开始任务）\n手动通关“标准模拟”可以更快的刷分\n只能刷等级奖励，拿蚀刻章得打完所有的“关键目标”" : {
+
+    },
+    "在活动页面最左侧开始" : {
 
     },
     "在第五层BOSS前暂停" : {
